# blur-utils

./: README.md  pyproject.toml  tox.ini
blur_utils/: __init__.py  _blur.py  _exceptions.py  _settings.py  _typing.py  _utils.py
face_blur_utils/: __init__.py  _blur.py  _exceptions.py  _settings.py  _typing.py  _utils.py
requirements/: requirements.txt
tests/: test_blur.py  test_settings.py  test_typing.py  test_utils.py
